# api-ooni-data-analytics-python

./: .dev.env  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  manage.py  pyproject.toml  run_docker.sh  setup.cfg  tox.ini
.github/workflows/: push.yml
api_ooni_data_analytics/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
api_ooni_data_analytics/settings/: __init__.py  base.py  develop.py
apps/: __init__.py
apps/tests/: __init__.py  test_app.py
apps/users/: __init__.py  admin.py  apps.py  manager.py  models.py
apps/users/migrations/: 0001_initial.py  __init__.py
apps/users/tests/: __init__.py
