[tool.poetry]
name = "api-ooni-data-analytics"
version = "0.1.0"
description = ""
authors = ["Fernando Gonzalez <gonzalez0fer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
redis = "^5.0.6"
celery = "^5.4.0"
flower = "^2.0.1"
panda = "^0.3.1"
numpy = "^2.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.3"
pydocstyle = "^6.3.0"
pytest = "^8.2.2"
tox = "^4.15.1"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
mongoengine = "^0.28.2"
django-timescaledb = "^0.2.13"
djangorestframework-simplejwt = "^5.3.1"
django-oauth-toolkit = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
