[metadata]
name = my_project
version = 0.1.0

[options]
packages = find:

[isort]
# Add a sorting profile based in black formater.
profile = black
# Add files or directories to the skip list.
skip = migrations

[pylint]
# Disable the message, report, category or checker with the given id(s).
disable = R0901  # Too many ancestors
# Maximum number of characters on a single line.
max-line-length = 120
# Add files or directories to the blacklist. They should be base names, not paths.
ignore = migrations

[pydocstyle]
# Exclude migration directories using regex
match-dir = ^(?!migrations).*$
